tests/paczka1/small_fuzzy/17345224.err
Error in line 9: j51hfQ S372 9,73
Error in line 13: vWLhnsQzr A479 64,7
